err/emspring.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/emspring-0.86.1661.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spring'...
Listing './lib/python3.5/site-packages/spring/csinfrastr'...
Compiling './lib/python3.5/site-packages/spring/csinfrastr/csdatabase.py'...
***   File "./lib/python3.5/site-packages/spring/csinfrastr/csdatabase.py", line 715
    print '{0} data was transferred and updated.'.format(target_table.__name__)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spring/csinfrastr/cslogger.py'...
***   File "./lib/python3.5/site-packages/spring/csinfrastr/cslogger.py", line 157
    print parinfo
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spring/csinfrastr/csreadinput.py'...
***   File "./lib/python3.5/site-packages/spring/csinfrastr/csreadinput.py", line 352
    print ' Hit Tab to get suggestions and auto-complete.'
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/images'...
Listing './lib/python3.5/site-packages/spring/images/icons'...
Listing './lib/python3.5/site-packages/spring/micprgs'...
Compiling './lib/python3.5/site-packages/spring/micprgs/michelixtracegrid.py'...
***   File "./lib/python3.5/site-packages/spring/micprgs/michelixtracegrid.py", line 315
    print trace_db
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/particle2d'...
Listing './lib/python3.5/site-packages/spring/segment2d'...
Compiling './lib/python3.5/site-packages/spring/segment2d/segmentplot.py'...
***   File "./lib/python3.5/site-packages/spring/segment2d/segmentplot.py", line 581
    print progress_statement
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/segment3d'...
Listing './lib/python3.5/site-packages/spring/segment3d/refine'...
Compiling './lib/python3.5/site-packages/spring/segment3d/refine/sr3d_project.py'...
***   File "./lib/python3.5/site-packages/spring/segment3d/refine/sr3d_project.py", line 285
    raise ValueError, error_msg
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spring/segment3d/refine/sr3d_reconstruct.py'...
***   File "./lib/python3.5/site-packages/spring/segment3d/refine/sr3d_reconstruct.py", line 1285
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spring/segment3d/seggridexplore.py'...
***   File "./lib/python3.5/site-packages/spring/segment3d/seggridexplore.py", line 386
    print each_file, stack_id
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/springgui'...
Compiling './lib/python3.5/site-packages/spring/springgui/spring_launch.py'...
***   File "./lib/python3.5/site-packages/spring/springgui/spring_launch.py", line 345
    print 'No databases were updated. Please provide input and output names for databases.'
                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/tests'...
Listing './lib/python3.5/site-packages/spring/tests/csinfrastr'...
Listing './lib/python3.5/site-packages/spring/tests/micprgs'...
Compiling './lib/python3.5/site-packages/spring/tests/micprgs/test_michelixtrace.py'...
***   File "./lib/python3.5/site-packages/spring/tests/micprgs/test_michelixtrace.py", line 73
    print helix_count
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spring/tests/particle2d'...
Listing './lib/python3.5/site-packages/spring/tests/segment2d'...
Listing './lib/python3.5/site-packages/spring/tests/segment3d'...
Listing './share'...
Listing './share/python-wheels'...
